--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
+spring.datasource.url=jdbc:mysql://localhost/dbjavanoite?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
