--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-spring.datasource.url=jdbc:mysql://localhost/dbjavanoite?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+# spring.datasource.url=jdbc:mysql://localhost/dbjavanoite?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/petshopdb?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
